(rule
 (targets libmy_project.a dllmy_project.so)
 (deps (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/../../target --release)
   (run sh -c
     "mv %{project_root}/../../target/release/libmy_project.so ./dllmy_project.so 2> /dev/null || \
      mv %{project_root}/../../target/release/libmy_project.dylib ./dllmy_project.so")
   (run mv %{project_root}/../../target/release/libmy_project.a libmy_project.a))))

(library
 (name my_project)
 (public_name my_project)
 (foreign_archives my_project)
 (c_library_flags
  (-lpthread -lc -lm)))
